[package]
name = "grass-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4"
env_logger = "0.11.5"
anyhow = "1.0.90"
reqwest = {version = "0.12.9", features = ["socks"]}
reqwest-websocket = "0.4.3"
uuid = { version = "1.1", features = ["v4"] }
futures-util = "0.3.31"
serde_json = "1.0.132"
chrono = "0.4.38"
base64 = "0.22.1"
random-string = "1.1.0"